Collapse css fix + JSDoc WIP

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -15,7 +15,6 @@
 
 .collapse--container {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -104,11 +103,5 @@
     font-size: 12px;
     line-height: 17px;
     padding: 20px 12px 12px 12px;
-  }
-}
-
-@media screen and (max-width: 1040px) {
-  .collapse--container {
-    height: auto;
   }
 }
