--- a/src/components/RentalCard/Rental-card.module.css
+++ b/src/components/RentalCard/Rental-card.module.css
@@ -6,6 +6,8 @@
   width: 340px;
   border-radius: 10px;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  transform: scale(1);
 }
 
 .rental--card::after {
@@ -15,6 +17,10 @@
   width: 340px;
   border-radius: 10px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+.rental--card:hover {
+  transform: scale(1.03);
 }
 
 .rental--card--img {
